# glc-drafts

./: README.md  code.txt  comands_list.cpp  comands_list.h  command.cpp  command.h
golden_leaf_coin/: CMakeLists.txt  CMakeSettings.json  README.md  build.sh  main.cpp  run.sh
golden_leaf_coin/build-win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  golden_leaf_coin.sln  golden_leaf_coin.vcxproj  golden_leaf_coin.vcxproj.filters
golden_leaf_coin/build-win32/externallibs/string_interpolation/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  string_interpolation.sln  string_interpolation.vcxproj  string_interpolation.vcxproj.filters
golden_leaf_coin/build-win32/externallibs/string_interpolation/string_interpolation.dir/Debug/string_i.02FD4AAD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  string_interpolation.lastbuildstate
golden_leaf_coin/build-win32/golden_leaf_coin.dir/Debug/: golden_leaf_coin.exe.recipe  std.compat.ixx.ifc  std.compat.ixx.ifc.d.json  std.compat.ixx.module.json  std.ixx.module.json
golden_leaf_coin/build-win32/golden_leaf_coin.dir/Debug/golden_leaf_coin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
golden_leaf_coin/build-win32/golden_leaf_coin.dir/Debug/golden_leaf_coin_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
golden_leaf_coin/build-win32/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
golden_leaf_coin/build-win32/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
golden_leaf_coin/build-win32/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
golden_leaf_coin/build-win32/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
golden_leaf_coin/conan/linux/: conanfile.txt
golden_leaf_coin/conan/linux/files/: FindBZip2.cmake  FindBoost.cmake  FindEigen3.cmake  FindSQLite3.cmake  FindSQLiteCpp.cmake  FindZLIB.cmake  Findargparse.cmake  Findcryptopp.cmake  Findfmt.cmake  Findlibbacktrace.cmake  Findnlohmann_json.cmake  Findrange-v3.cmake  Findre2.cmake  Findspdlog.cmake  Findtabulate.cmake  conan_paths.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
golden_leaf_coin/conan/macos/: conanfile.txt
golden_leaf_coin/conan/windows/: FindBZip2.cmake  FindBoost.cmake  FindZLIB.cmake  Findcryptopp.cmake  Findfmt.cmake  Findimgui.cmake  Findspdlog.cmake  conan_paths.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
golden_leaf_coin/help/: some.py
golden_leaf_coin/materials/uml/: cliapplication.drawio
golden_leaf_coin/notations/: notations.txt  temp.txt  завдання.odt
golden_leaf_coin/notations/drafts/: GLCCLICommandsTools.cpp  GLCCLICommandsTools.h
golden_leaf_coin/src/: GLCVariables.cpp  GLCVariables.h
golden_leaf_coin/src/front/application/: GLCApplicable.h  GLCApplication.h  GLCApplicationConfiguration.cpp  GLCApplicationConfiguration.h
golden_leaf_coin/src/front/application/authentication/: GLCAuthentificationSecurity.cpp  GLCAuthentificationSecurity.h
golden_leaf_coin/src/front/application/authentication/cli/: GLCCLIAuthentification.cpp  GLCCLIAuthentification.h
golden_leaf_coin/src/front/application/cli/: GLCCLIApplication.cpp  GLCCLIApplication.h  GLCCLICommands.cpp  GLCCLICommands.h  GLCCLIDecoration.cpp  GLCCLIDecoration.h  GLCCLIInpput.cpp  GLCCLIInput.h  GLCCLIVariables.cpp  GLCCLIVariables.h
golden_leaf_coin/src/front/application/gui/: GLCGUIApplication.cpp  GLCGUIApplication.h
golden_leaf_coin/src/front/application/mainarguments/: GLCApplicationMainArgumentsParser.cpp  GLCApplicationMainArgumentsParser.h  GLCApplicationProgramArguments.cpp  GLCApplicationProgramArguments.h
golden_leaf_coin/src/glcstl/: GLCBadInitializationException.cpp  GLCBadInitializationException.h  GLCDateTime.cpp  GLCDateTime.h  GLCDateTimeFormat.cpp  GLCDateTimeFormat.h  GLCDateTimeFormatTypes.cpp  GLCDateTimeFormatTypes.h  GLCException.cpp  GLCException.h  GLCFormatException.cpp  GLCFormatException.h  GLCInternalException.cpp  GLCInternalException.h
golden_leaf_coin/src/mine/configurator/: GLCUserAction.cpp  GLCUserAction.h
golden_leaf_coin/src/mine/csd/: GLCCSD.cpp  GLCCSD.h
golden_leaf_coin/src/network/peer_to_peer/: GLCNetworkPeerToPeerConfigurator.cpp  GLCNetworkPeerToPeerConfigurator.h  GLCNetworkPeerToPeerConstants.cpp  GLCNetworkPeerToPeerConstants.h
golden_leaf_coin/src/program/repair/: GCLRepairable.h
golden_leaf_coin/src/project/helper/: GLCGenerativeMacros.h
src/: application.cpp  application.h  commands_list.cpp  commands_list.h  constants.h  error.cpp  error.h  mode.cpp  mode.h
